--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@nuxtjs/google-fonts": "^3.2.0",
     "@radix-icons/vue": "^1.0.0",
     "@vue/compiler-sfc": "^3.4.31",
+    "@vueuse/core": "^10.11.0",
     "appwrite": "^15.0.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
