added card component

--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "appwrite": "^15.0.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "dayjs": "^1.11.11",
     "nuxt": "^3.12.3",
     "pinia": "^2.1.7",
     "radix-vue": "^1.9.0",
