added drug and drop

--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "@pinia/nuxt": "^0.5.1",
     "@radix-icons/vue": "^1.0.0",
     "@tanstack/vue-query": "^5.51.1",
+    "@vee-validate/nuxt": "^4.13.2",
+    "@vee-validate/zod": "^4.13.2",
     "@vue/compiler-sfc": "^3.4.31",
     "@vueuse/core": "^10.11.0",
     "appwrite": "^15.0.0",
@@ -29,6 +31,7 @@
     "tailwind-merge": "^2.4.0",
     "tailwindcss-animate": "^1.0.7",
     "uuid": "^10.0.0",
+    "vee-validate": "^4.13.2",
     "vue": "latest"
   },
   "packageManager": "yarn@1.22.22+sha512.a6b2f7906b721bba3d67d4aff083df04dad64c399707841b7acf00f6b133b7ac24255f2652fa22ae3534329dc6180534e98d17432037ff6fd140556e2bb3137e",
